# rust-sdk

./: .env.example  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  MANUAL_CHANGELOG.md  PUBLISHING.md  README.md  REGENERATING_SDK.md  build.rs  openapi.json  openapi.overlay.json  stainless.yml
.claude/skills/regenerate-sdk/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml  openapi.yml  release-plz.yml
agent_docs/: openapi-codegen.md  testing.md
crates/privy-api/: Cargo.toml
crates/privy-api/src/: lib.rs  progenitor_client.rs
crates/privy-libninja/: Cargo.toml
crates/privy-libninja/examples/: authenticate.rs  create_user.rs  create_user_wallet.rs  create_wallet.rs  delete_user.rs  delete_v_1_key_quorums_by_key_quorum_id.rs  delete_v_1_policies_by_policy_id.rs  delete_v_1_policies_rules_by_rule_id.rs  get_transaction.rs  get_user.rs  get_users.rs  get_v_1_key_quorums_by_key_quorum_id.rs  get_v_1_policies_by_policy_id.rs  get_v_1_policies_rules_by_rule_id.rs  get_v_1_users_fiat_accounts_by_user_id.rs  get_v_1_users_fiat_kyc_by_user_id.rs  get_wallet.rs  get_wallet_balance.rs  get_wallets.rs  patch_v_1_key_quorums_by_key_quorum_id.rs  patch_v_1_policies_by_policy_id.rs  patch_v_1_policies_rules_by_rule_id.rs  patch_v_1_users_fiat_kyc_by_user_id.rs  post_v_1_apps_fiat_by_app_id.rs  post_v_1_key_quorums.rs  post_v_1_policies.rs  post_v_1_policies_rules_by_policy_id.rs  post_v_1_user_signers_authenticate.rs  post_v_1_users_accounts_by_user_id.rs  post_v_1_users_accounts_unlink_by_user_id.rs  post_v_1_users_custom_auth_id.rs  post_v_1_users_custom_metadata_by_user_id.rs  post_v_1_users_discord_username.rs  post_v_1_users_email_address.rs  post_v_1_users_farcaster_fid.rs  post_v_1_users_fiat_accounts_by_user_id.rs  post_v_1_users_fiat_kyc_by_user_id.rs  post_v_1_users_fiat_kyc_link_by_user_id.rs  post_v_1_users_fiat_offramp_by_user_id.rs  post_v_1_users_fiat_onramp_by_user_id.rs  (+19 more)
crates/privy-libninja/src/: lib.rs
crates/privy-libninja/src/model/: authenticate_response.rs  custom_metadata.rs  delete_v1_key_quorums_by_key_quorum_id_response.rs  delete_v1_policies_by_policy_id_response.rs  delete_v1_policies_rules_by_rule_id_response.rs  get_users_response.rs  get_v1_users_fiat_accounts_by_user_id_response.rs  get_v1_users_fiat_kyc_by_user_id_response.rs  get_wallet_balance_response.rs  get_wallets_response.rs  hpke_encryption.rs  key_quorum.rs  linked_account_input.rs  mod.rs  owner_input.rs  patch_v1_policies_rules_by_rule_id_response.rs  patch_v1_users_fiat_kyc_by_user_id_response.rs  policy.rs  policy_chain_type.rs  policy_rule.rs  post_v1_apps_fiat_by_app_id_response.rs  post_v1_user_signers_authenticate_response.rs  post_v1_users_fiat_accounts_by_user_id_response.rs  post_v1_users_fiat_kyc_by_user_id_response.rs  post_v1_users_fiat_kyc_link_by_user_id_response.rs  post_v1_users_fiat_offramp_by_user_id_response.rs  post_v1_users_fiat_onramp_by_user_id_response.rs  post_v1_users_fiat_status_by_user_id_response.rs  post_v1_users_fiat_tos_by_user_id_response.rs  post_v1_wallets_with_recovery_response.rs  public_key_owner.rs  raw_sign_response.rs  rule_response.rs  transaction.rs  user.rs  user_owner.rs  variant0.rs  variant1.rs  wallet.rs  wallet_additional_signer.rs  (+7 more)
crates/privy-libninja/src/request/: authenticate.rs  create_user.rs  create_user_wallet.rs  create_wallet.rs  delete_user.rs  delete_v_1_key_quorums_by_key_quorum_id.rs  delete_v_1_policies_by_policy_id.rs  delete_v_1_policies_rules_by_rule_id.rs  get_transaction.rs  get_user.rs  get_users.rs  get_v_1_key_quorums_by_key_quorum_id.rs  get_v_1_policies_by_policy_id.rs  get_v_1_policies_rules_by_rule_id.rs  get_v_1_users_fiat_accounts_by_user_id.rs  get_v_1_users_fiat_kyc_by_user_id.rs  get_wallet.rs  get_wallet_balance.rs  get_wallets.rs  mod.rs  patch_v_1_key_quorums_by_key_quorum_id.rs  patch_v_1_policies_by_policy_id.rs  patch_v_1_policies_rules_by_rule_id.rs  patch_v_1_users_fiat_kyc_by_user_id.rs  post_v_1_apps_fiat_by_app_id.rs  post_v_1_key_quorums.rs  post_v_1_policies.rs  post_v_1_policies_rules_by_policy_id.rs  post_v_1_user_signers_authenticate.rs  post_v_1_users_accounts_by_user_id.rs  post_v_1_users_accounts_unlink_by_user_id.rs  post_v_1_users_custom_auth_id.rs  post_v_1_users_custom_metadata_by_user_id.rs  post_v_1_users_discord_username.rs  post_v_1_users_email_address.rs  post_v_1_users_farcaster_fid.rs  post_v_1_users_fiat_accounts_by_user_id.rs  post_v_1_users_fiat_kyc_by_user_id.rs  post_v_1_users_fiat_kyc_link_by_user_id.rs  (+21 more)
crates/privy-openapi/: CHANGELOG.md  Cargo.toml
crates/privy-openapi/src/: lib.rs
examples/: README.md  alloy_integration.rs  basic_usage.rs  create_user.rs  create_wallet.rs  create_wallet_ethereum.rs  delete_user.rs  get_transaction.rs  get_wallet.rs  get_wallets.rs  jwt_authentication.rs  quorum_wallet.rs  search_users.rs  solana.rs  typed_wallets.rs  update_wallet.rs  wallet_balance.rs  wallet_export.rs  wallet_raw_sign.rs  wallet_rpc.rs  wallet_transactions.rs
scripts/: openapi.jq  rust-version.sh
scripts/schema-patches/: 01-operation-ids.jq  02-owner-input.jq  03-solana-wallet-required-fields.jq  04-remove-privy-app-id-param.jq  05-remove-deprecated.jq  06-remove-additional-properties.jq  07-anyof-to-oneof.jq  08-coinbase-onramp-assets.jq  09-deduplicate-enums.jq  10-kraken-multipart.jq  11-deduplicate-properties.jq  12-remove-custom-oauth.jq  13-downgrade-openapi-version.jq  14-fix-responses.jq  15-fix-nullable-types.jq
src/: client.rs  errors.rs  ethereum.rs  import.rs  jwt_exchange.rs  keys.rs  lib.rs  main.rs  middleware.rs  privy_hpke.rs  solana.rs  subclients.rs  types.rs  utils.rs
src/alloy/: mod.rs  signer.rs
src/subclients/: key_quorums.rs  mod.rs  policies.rs  wallets.rs
src/wallet/: eth.rs  mod.rs  sol.rs
tests/: alloy_integration.rs  client_behavior.rs  e2e.rs  ethereum.rs  fiat.rs  integration_test.rs  key_quorums.rs  policies.rs  solana.rs  test_private_key.pem  test_public_key.pem  transactions.rs  users.rs  wallets.rs
tests/common/: mod.rs
