[package]
name = "privy-rust"
version = "0.1.0"
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
solana-sdk = "2.1.9"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.16"
async-trait = "0.1"
tracing = "0.1.41"
progenitor-client = "0.11.0"
delegate = "0.13.4"
p256 = { version = "0.13.2", features = ["pem", "ecdsa", "pkcs8"] }
futures = "0.3.31"
serde_json_canonicalizer = "0.3.1"
sha2 = "0.10.9"
hex = "0.4"
bincode = "1.3"
hpke = "0.13.0"
rand = "0.9.2"
spki = { version = "0.7", features = ["std", "alloc"] }
der = { version = "0.7", features = ["std", "alloc"] }
const-oid = { version = "0.10.1", features = ["db"] }
regress = "0.10.4"
uuid = { version = "1.0", features = ["serde"] }
lru = "0.16.1"

[dev-dependencies]
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
test-case = "3.3.1"
tracing-test = "0.2.5"
tempfile = "3.0"

# used for deterministic key generation under testing
rand_chacha = "0.9.0"
hex = "0.4"

[[example]]
doc-scrape-examples = true
name = "get_wallets"
path = "examples/get_wallets.rs"

[build-dependencies]
prettyplease = "0.2.37"
progenitor = {path = "../progenitor/progenitor"}
quote = "1.0.40"
serde_json = "1.0"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
serde_yaml = "0.9"
proc-macro2 = "1.0"
openapiv3 = "2.2.0"
heck = "0.5.0"
