[package]
name = "privy-rust"
version = "0.1.0"
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# dependencies from progenitor
progenitor-client = "0.11.0"
reqwest = { version = "0.12", features = ["json"] }
regress = "0.10.4" # js-compatible regex
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde"] }

# crypto
p256 = { version = "0.13.2", features = ["pem", "ecdsa", "pkcs8"] }
base64 = "0.21"
serde_json_canonicalizer = "0.3.1"
sha2 = "0.10.9"
hex = "0.4"
hpke = "0.13.0"
rand = "0.9.2"
spki = { version = "0.7", features = ["std", "alloc"] }
der = { version = "0.7", features = ["std", "alloc"] }

# remaining deps
thiserror = "2.0.16"
tracing = "0.1.41"
futures = "0.3.31"
lru = "0.16.1"

[dev-dependencies]
jsonwebtoken = "9.3.1"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
test-case = "3.3.1"
tempfile = "3.0"

# used for deterministic key generation under testing
rand_chacha = "0.9.0"
hex = "0.4"

# uuid again here since we don't need feature v4 outside of dev deps
uuid = { version = "1.18.1", features = ["v4"] }

[[example]]
doc-scrape-examples = true
name = "get_wallets"
path = "examples/get_wallets.rs"

[build-dependencies]
prettyplease = "0.2.37"
# the privy branch includes these PRs:
# https://github.com/oxidecomputer/progenitor/pull/1194
# https://github.com/oxidecomputer/typify/pull/894
progenitor = { git = "https://github.com/arlyon/progenitor", branch = "privy" }
quote = "1.0.40"
serde_json = "1.0"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
serde_yaml = "0.9"
proc-macro2 = "1.0"
openapiv3 = "2.2.0"
heck = "0.5.0"
