[package]
name = "privy-rs"
description = "Privy SDK for Rust"
version = "0.1.0-alpha.4"
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace]
members = [".", "crates/privy-openapi"]

[features]
default = []
alloy = [
    "dep:alloy-signer",
    "dep:alloy-primitives",
    "dep:alloy-consensus",
    "dep:alloy-network",
    "dep:async-trait",
]
# enables potentially unsafe logging in debug mode for easier debugging
unsafe_debug = []

[dependencies]
# dependencies from progenitor
reqwest = { version = "0.12", features = ["json"] }
regress = "0.10.4" # js-compatible regex
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde"] }
privy-openapi = { path = "crates/privy-openapi", version = "0.1.0-alpha.1" }

# crypto
p256 = { version = "0.13.2", features = ["pem", "ecdsa", "pkcs8"] }
base64 = "0.21"
serde_json_canonicalizer = "0.3.1"
sha2 = "0.10.9"
hex = "0.4"
hpke = { version = "0.12.0", features = ["std"] }
rand = "0.8.5"
spki = { version = "0.7", features = ["std", "alloc"] }
der = { version = "0.7", features = ["std", "alloc"] }

# remaining deps
thiserror = "2.0.16"
tracing = "0.1.41"
futures = "0.3.31"
lru = "0.16.1"

# alloy
alloy-signer = { version = "1.0", optional = true }
alloy-primitives = { version = "1.0", optional = true }
alloy-consensus = { version = "1.0", optional = true }
alloy-network = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
zeroize = "1.8.2"

[dev-dependencies]
jsonwebtoken = "9.3.1"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
test-case = "3.3.1"
tempfile = "3.0"

# used for deterministic key generation under testing
rand_chacha = "0.3.1"

# uuid again here since we don't need feature v4 outside of dev deps
uuid = { version = "1.18.1", features = ["v4"] }

solana-sdk = "3.0.0"
solana-rpc-client = "3.0.2"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
bincode = "1.3.3"
solana-transaction = { version = "3.0.1", features = ["bincode", "serde"] }
mark-flaky-tests = { version = "1.0.2", features = ["tokio"] }
secp256k1 = { version = "0.30", features = ["global-context", "rand"] }
sha3 = "0.10.8"
httpmock = "0.8"


[[example]]
doc-scrape-examples = true
name = "get_wallets"
path = "examples/get_wallets.rs"

[[example]]
name = "alloy_integration"
path = "examples/alloy_integration.rs"
required-features = ["alloy"]

[build-dependencies]
prettyplease = "0.2.37"
progenitor = "0.11.1"
quote = "1.0.40"
serde_json = "1.0"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
serde_yaml = "0.9"
proc-macro2 = "1.0"
openapiv3 = "2.2.0"
heck = "0.5.0"
