[package]
name = "privy-api"
version = "0.0.1"
edition = "2021"
license = "SPECIFY A LICENSE BEFORE PUBLISHING"

[dependencies]
bytes = "1.9"
futures-core = "0.3"
percent-encoding = "2.3"
regress = "0.10"
reqwest = { version = "0.12", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
progenitor-client = "0.11.0"
