[package]
description="Privy OpenAPI Bindings"
name = "privy-openapi"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.9"
chrono = { version = "0.4", default-features=false, features = ["serde"] }
futures-core = "0.3"
progenitor-client = "0.11.2"
regress = "0.10"
reqwest = { version = "0.12", default-features=false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
uuid = { version = "1.0", features = ["serde", "v4"] }

